--- a/src/Solution/MQTT.cls
+++ b/src/Solution/MQTT.cls
@@ -48,7 +48,14 @@ XData ProductionDefinition
     <Setting Target="Adapter" Name="Url">tcp://mqttbroker:1883</Setting>
     <Setting Target="Host" Name="%remoteSettings">TargetConfigNames=Process_MQTT</Setting>
   </Item>
-</Production>
+  <Item Name="From_MQTT_PEX4" Category="" ClassName="Solution.BS.MQTTPEX" PoolSize="1" Enabled="true" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
+    <Setting Target="Host" Name="%remoteClassname">dc.MQTTServicePEX4</Setting>
+    <Setting Target="Host" Name="%gatewayHost">netgw</Setting>
+    <Setting Target="Host" Name="%gatewayPort">55556</Setting>
+    <Setting Target="Adapter" Name="Topic">/ID_123/XGH/EKG/PEX4/#</Setting>
+    <Setting Target="Adapter" Name="Url">tcp://mqttbroker:1883</Setting>
+    <Setting Target="Host" Name="%remoteSettings">TargetConfigNames=Process_MQTT</Setting>
+  </Item></Production>
 }
 
 }
