--- a/src/Solution/RAWDATA.cls
+++ b/src/Solution/RAWDATA.cls
@@ -17,7 +17,9 @@ Index idxseq On seq;
 
 ClassMethod INSERT(seq, list) As %Status
 {
-    For i=1:1:4 {
+    For i=1:1:4 { Set p(i)=0 }
+    Set count=$LISTLENGTH(list)
+    For i=1:1:count {
         Set p(i)=$LIST(list,i)
     }
     &SQL(INSERT INTO RAWDATA (seq, p1,p2,p3,p4) VALUES (:seq, :p(1),:p(2),:p(3),:p(4)))
